--- a/app/views/notifications/show_notification.html.erb
+++ b/app/views/notifications/show_notification.html.erb
@@ -7,8 +7,10 @@
 
 <%if @notification.status != "Paid" && @notification.status != "Rejected" %>
   <p>
-      <%= button_to "Pay for Customized Item", add_to_cart_path(zord_id: @notification.zord.id, notification_id: @notification.id), method: :post, class: "btn btn-success" %>
+  <%= button_to "Pay for Customized Item", add_to_cart_path(zord_id: @notification.zord.id, notification_id: @notification.id), method: :post, class: "btn btn-success" %>
   </p>
-  <%else%>
-  <p>You have already added this item to cart. </p>
- <%end%>
+  <%elsif @notification.status == "Rejected"%>
+  <p>Sorry, unfortunately your request has been rejected!</p>
+  <% else %>
+  <p>This item has already been added to the cart.</p>
+<%end%>
